--- a/src/main/resources/templates/fragments/fragment-piedpage.html
+++ b/src/main/resources/templates/fragments/fragment-piedpage.html
@@ -1,3 +1,3 @@
-<footer xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-piedpage">
+<footer xmlns:th="http://www.thymeleaf.org" data-th-fragment="frag-piedpage" class="footer">
 	<p>&copy; ENI - tous droits réservés</p>
 </footer>
