--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>ENI Enchères - Connexion</title>
 	<link rel="icon" data-th-href="@{/images/logoEnchere.png}" />
@@ -17,64 +15,56 @@
 
     <form th:action="@{/login}" method="post">
     
-    <section class="vh-1000 gradient-custom">
-        <div class="container py-5 h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-              <div class="card bg-dark text-white" style="border-radius: 1rem;">
-                <div class="card-body p-5 text-center">
+    <section>
+        <div>
+
+                  <button type="button" aria-label="Close" onclick="window.location.href = '/';"></button>
                 
-                  <button type="button" class="btn-close btn-close-white" aria-label="Close" onclick="window.location.href = '/';"></button>      
-                
-                  <div class="mb-md-5 mt-md-4 pb-5">
+                  <div>
                   
 
       
-                    <h2 class="fw-bold mb-2 text-uppercase">Connexion</h2>
+                    <h2 >Connexion</h2>
                     
                     <div  th:if="${param.error}">Mauvais email ou mot de passe</div>
                     <div th:if="${param.logout}">Vous êtes déconnecté</div>
                     
                     
-                    <p class="text-white-50 mb-5">Veuillez entrer votre identifiant et votre mot de passe !</p>
+                    <p >Veuillez entrer votre identifiant et votre mot de passe !</p>
       
-                    <div class="form-outline form-white mb-4">
-                      <input type="email" id="idUsername" class="form-control form-control-lg" name="username"/>
-                      <label class="form-label">Email</label>
+                    <div>
+                      <input type="email" id="idUsername"  name="username"/>
+                      <label >Email</label>
                     </div>
       
-                    <div class="form-outline form-white mb-4">
-                      <input type="password" id="idPassword" class="form-control form-control-lg" name="password"/>
-                      <label class="form-label" >Mot de passe</label>
+                    <div >
+                      <input type="password" id="idPassword"  name="password"/>
+                      <label >Mot de passe</label>
                     </div>
-      
-                    <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Mot de passe oublié ?</a></p>
+                          <p ><a class="text-white-50" href="#!">Mot de passe oublié ?</a></p>
 
                     
                     <input type="checkbox">
-                    <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Se souvenir de moi ?</a></p>
+                    <p ><a href="#!">Se souvenir de moi ?</a></p>
 
       
-                    <button class="btn btn-outline-light btn-lg px-5" type="submit">Connexion</button>
+                    <button  type="submit">Connexion</button>
       
-                    <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                      <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                      <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                      <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
+                    <div >
+                      <a href="#!" ><i></i></a>
+                      <a href="#!" ><i ></i></a>
+                      <a href="#!" ><i ></i></a>
                     </div>
       
                   </div>
       
                   <div>
-                    <p class="mb-0">Vous n'avez pas de compte ? <a data-th-href="@{/utilisateur/inscription}" class="text-white-50 fw-bold">S'inscrire</a>
+                    <p>Vous n'avez pas de compte ? <a data-th-href="@{/utilisateur/inscription}">S'inscrire</a>
                     </p>
                   </div>
       
                 </div>
-              </div>
-            </div>
-          </div>
-        </div>
+
       </section>
     </form>
     
